--- a/.github/workflows/bliud.yml
+++ b/.github/workflows/bliud.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Download Gradle using proxy
       run: |
-        curl -L -o gradle-8.7-bin.zip = https://v.wuyu.email/py/services.gradle.org/distributions/gradle-8.7-bin.zip
+        curl -L -o gradle-8.7-bin.zip https://v.wuyu.email/py/services.gradle.org/distributions/gradle-8.7-bin.zip
         mkdir -p $HOME/.gradle/wrapper/dists/gradle-8.7-bin/
         unzip gradle-8.7-bin.zip -d $HOME/.gradle/wrapper/dists/gradle-8.7-bin/
         mv $HOME/.gradle/wrapper/dists/gradle-8.7-bin/gradle-8.7 $HOME/.gradle/wrapper/dists/gradle-8.7-bin/gradle-8.7-all
