--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https://v.wuyu.email/py/services.gradle.org/distributions/gradle-8.7-bin.zip
+distributionUrl=file://${GRADLE_USER_HOME}/wrapper/dists/gradle-8.7-bin/gradle-8.7-all.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
