--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=file:///home/runner/.gradle/wrapper/dists/gradle-8.7-bin/gradle-8.7-all.zip
+distributionUrl=file:///home/runner/.gradle/wrapper/dists/gradle-8.7-bin/gradle-8.7-all/gradle-8.7-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
